@@ -64,7 +64,7 @@ my $module = path($mint_dir, 'lib/My/New/Dist.pm')->slurp_utf8;
 
 like(
     $module,
-    qr/^use strict;\nuse warnings;\npackage My::New::Dist;/m,
+    qr/^use strict;\nuse warnings;\nno if "\$\]" >= 5.031008, feature => 'indirect';\npackage My::New::Dist;/m,
     'our new module has a valid package declaration',
 );
 
