@@ -70,7 +70,7 @@ my $module = path($mint_dir, 'lib/Dist/Zilla/Plugin/Foo/Bar.pm')->slurp_utf8;
 
 like(
     $module,
-    qr/^use strict;\nuse warnings;\npackage Dist::Zilla::Plugin::Foo::Bar;/,
+    qr/^use strict;\nuse warnings;\nno if "\$\]" >= 5.031008, feature => 'indirect';\npackage Dist::Zilla::Plugin::Foo::Bar;/m,
     'our new module has a valid package declaration',
 );
 
